--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -92,7 +92,7 @@
             android:contentDescription="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_onboarding" />
+            app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
