--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -1,88 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/windowBackground"
-    android:orientation="vertical">
+    android:background="?android:attr/windowBackground">
 
-    <FrameLayout
-        android:id="@+id/userContributionsButton"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:background="?attr/main_toolbar_color"
-        android:clickable="true"
-        android:elevation="4dp"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackgroundBorderless">
-
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <FrameLayout
+            android:id="@+id/userContributionsButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="56dp"
-            android:orientation="vertical">
+            android:layout_height="72dp"
+            android:background="?attr/main_toolbar_color"
+            android:clickable="true"
+            android:elevation="4dp"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless">
 
-            <TextView
-                android:id="@+id/usernameText"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="?attr/material_theme_primary_color"
-                android:textSize="16sp"
-                tools:text="Androidloggedinusername" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="56dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/contributionsText"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/usernameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="?attr/material_theme_primary_color"
+                    android:textSize="16sp"
+                    tools:text="Androidloggedinusername" />
+
+                <TextView
+                    android:id="@+id/contributionsText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:textColor="?attr/colorAccent"
+                    android:textSize="16sp"
+                    tools:text="100 in-app contributions" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="16dp"
+                android:contentDescription="@null"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_chevron_forward_gray"
+                app:tint="?attr/colorAccent" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="?attr/colorAccent"
-                android:textSize="16sp"
-                tools:text="100 in-app contributions" />
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="-4dp"
+                android:indeterminate="true"
+                android:indeterminateTint="?attr/colorAccent"
+                android:progressBackgroundTint="@color/accent30"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
-        </LinearLayout>
+        </FrameLayout>
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@null"
-            android:padding="8dp"
-            app:srcCompat="@drawable/ic_chevron_forward_gray"
-            app:tint="?attr/colorAccent" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="-4dp"
-            android:indeterminate="true"
-            android:indeterminateTint="?attr/colorAccent"
-            android:progressBackgroundTint="@color/accent30"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:layout_height="match_parent">
 
-    </FrameLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tasksRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </LinearLayout>
+
+    <org.wikipedia.views.WikiErrorView
+        android:id="@+id/errorView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="?android:windowBackground"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tasksRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</LinearLayout>
+</FrameLayout>
