--- a/app/src/main/res/xml/developer_preferences.xml
+++ b/app/src/main/res/xml/developer_preferences.xml
@@ -283,6 +283,10 @@
 
     <PreferenceCategory android:title="@string/preferences_developer_suggested_edits_category">
         <SwitchPreferenceCompat
+            android:key="@string/preference_key_show_suggested_edits_survey"
+            android:title="@string/preference_key_show_suggested_edits_survey" />
+
+        <SwitchPreferenceCompat
             android:key="@string/preference_key_show_suggested_edits_tooltip"
             android:title="@string/preference_key_show_suggested_edits_tooltip" />
 
