Code review comments addressed

--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -22,6 +22,8 @@
             android:id="@+id/addContainer"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingEnd="16dp"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical">
 
             <ImageView
@@ -49,13 +51,14 @@
             android:id="@+id/translateContainer"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/suggetedEditsTranslateImage"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="32dp"
                 android:contentDescription="@null"
                 android:padding="12dp"
                 android:src="@drawable/ic_translate_white_24dp"
