--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -76,6 +76,8 @@
         <item name="chip_background_color">@color/base80</item>
         <item name="chip_text_color">@color/base20</item>
         <item name="color_group_52">@color/accent75</item>
+        <item name="action_mode_green_background">@color/green50</item>
+        <item name="lighter_green_background">@color/green90</item>
 
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base100</item>
