--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -69,7 +69,7 @@
                 android:layout_gravity="end"
                 android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
                 android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
-                android:background="@drawable/arrow"
+                android:background="@drawable/triangle"
                 android:elevation="4dp" />
 
             <TextView
@@ -102,7 +102,7 @@
         android:layout_gravity="end"
         android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
         android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
-        android:background="@drawable/arrow"
+        android:background="@drawable/triangle"
         android:elevation="4dp"
         android:visibility="gone" />
 
@@ -122,7 +122,7 @@
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:background="@drawable/arrow" />
+        android:background="@drawable/triangle" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
