--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -23,159 +23,173 @@
         android:gravity="center"
         android:visibility="gone" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/suggested_edits_stats_bottom_margin"
-        android:paddingStart="@dimen/suggested_edits_screen_margin"
-        android:paddingEnd="@dimen/suggested_edits_screen_margin">
-
-        <org.wikipedia.views.ImageTitleDescriptionView
-            android:id="@+id/contributionsStatsView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <org.wikipedia.views.ImageTitleDescriptionView
-            android:id="@+id/editStreakStatsView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="@+id/editQualityStatsView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <org.wikipedia.views.ImageTitleDescriptionView
-            android:id="@+id/pageViewStatsView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView" />
-
-        <org.wikipedia.views.ImageTitleDescriptionView
-            android:id="@+id/editQualityStatsView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editStreakStatsView" />
-
-        <LinearLayout
-            android:id="@+id/tooltipLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView">
-
-            <View
-                android:id="@+id/topTooltipArrow"
-                android:layout_width="30dp"
-                android:layout_height="15dp"
-                android:layout_gravity="end"
-                android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
-                android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
-                android:background="@drawable/triangle"
-                android:elevation="4dp" />
-
-            <TextView
-                android:id="@+id/tooltipTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/paper_color"
-                android:elevation="4dp"
-                android:fontFamily="sans-serif"
-                android:lineSpacingExtra="6sp"
-                android:padding="16dp"
-                android:textAlignment="center"
-                android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/onboardingImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@null"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <View
-        android:id="@+id/bottomTooltipArrow"
-        android:layout_width="30dp"
-        android:layout_height="15dp"
-        android:layout_gravity="end"
-        android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
-        android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
-        android:background="@drawable/triangle"
-        android:elevation="4dp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/textViewForMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/suggested_edits_screen_margin"
-        android:layout_marginEnd="@dimen/suggested_edits_screen_margin"
-        android:fontFamily="sans-serif"
-        android:lineSpacingExtra="6sp"
-        android:textAlignment="center"
-        android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-
-    <View
-        android:layout_width="30dp"
-        android:layout_height="15dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/triangle" />
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/yellow50">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/tasksRecyclerView"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/paper_color"
+                android:layout_marginBottom="@dimen/suggested_edits_stats_bottom_margin"
                 android:paddingStart="@dimen/suggested_edits_screen_margin"
-                android:paddingEnd="@dimen/suggested_edits_screen_margin" />
+                android:paddingEnd="@dimen/suggested_edits_screen_margin">
 
-            <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+                <org.wikipedia.views.ImageTitleDescriptionView
+                    android:id="@+id/contributionsStatsView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-               <Button
-                   android:id="@+id/paused"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Paused" />
+                <org.wikipedia.views.ImageTitleDescriptionView
+                    android:id="@+id/editStreakStatsView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toStartOf="@+id/editQualityStatsView"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-               <Button
-                   android:id="@+id/disabled"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Disabled" />
+                <org.wikipedia.views.ImageTitleDescriptionView
+                    android:id="@+id/pageViewStatsView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView" />
 
-               <Button
-                   android:id="@+id/ipBlocked"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="ipBlocked" />
-           </LinearLayout>
+                <org.wikipedia.views.ImageTitleDescriptionView
+                    android:id="@+id/editQualityStatsView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/editStreakStatsView" />
 
+                <LinearLayout
+                    android:id="@+id/tooltipLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView">
+
+                    <View
+                        android:id="@+id/topTooltipArrow"
+                        android:layout_width="30dp"
+                        android:layout_height="15dp"
+                        android:layout_gravity="end"
+                        android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
+                        android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
+                        android:background="@drawable/triangle"
+                        android:elevation="4dp" />
+
+                    <TextView
+                        android:id="@+id/tooltipTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/paper_color"
+                        android:elevation="4dp"
+                        android:fontFamily="sans-serif"
+                        android:lineSpacingExtra="6sp"
+                        android:padding="16dp"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/onboardingImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@null"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:id="@+id/bottomTooltipArrow"
+                android:layout_width="30dp"
+                android:layout_height="15dp"
+                android:layout_gravity="end"
+                android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
+                android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
+                android:background="@drawable/triangle"
+                android:elevation="4dp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/textViewForMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/suggested_edits_screen_margin"
+                android:layout_marginEnd="@dimen/suggested_edits_screen_margin"
+                android:fontFamily="sans-serif"
+                android:lineSpacingExtra="6sp"
+                android:textAlignment="center"
+                android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="15dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/triangle" />
+
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swipeRefreshLayout"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:background="@color/green90">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/tasksRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="?attr/paper_color"
+                        android:paddingStart="@dimen/suggested_edits_screen_margin"
+                        android:paddingEnd="@dimen/suggested_edits_screen_margin" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <Button
+                            android:id="@+id/paused"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Paused" />
+
+                        <Button
+                            android:id="@+id/disabled"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Disabled" />
+
+                        <Button
+                            android:id="@+id/ipBlocked"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="ipBlocked" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </LinearLayout>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
