--- a/app/src/main/res/layout/view_tabs_count.xml
+++ b/app/src/main/res/layout/view_tabs_count.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tabs_count_text"
+        android:id="@+id/tabsCountText"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_gravity="center"
