Stop suppressing Gothic language selection.
Change-Id: I6d1becf09752fb61d00e5917ee694b3cc78a0027

--- a/app/src/main/res/values/languages_list.xml
+++ b/app/src/main/res/values/languages_list.xml
@@ -261,6 +261,7 @@
     <item>cu</item>
     <item>bug</item>
     <item>kg</item>
+    <item>got</item>
     <item>inh</item>
     <item>ch</item>
     <item>pnt</item>
@@ -560,6 +561,7 @@
     <item>словѣньскъ / ⰔⰎⰑⰂⰡⰐⰠⰔⰍⰟ</item>
     <item>ᨅᨔ ᨕᨘᨁᨗ</item>
     <item>Kongo</item>
+    <item>𐌲𐌿𐍄𐌹𐍃𐌺</item>
     <item>ГӀалгӀай</item>
     <item>Chamoru</item>
     <item>Ποντιακά</item>
@@ -859,6 +861,7 @@
     <item>Church Slavic</item>
     <item>Buginese</item>
     <item>Kongo</item>
+    <item>Gothic</item>
     <item>Ingush</item>
     <item>Chamorro</item>
     <item>Pontic</item>
