--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -1,80 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/taskInfoContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
-    <org.wikipedia.views.ImageTitleDescriptionView
-        android:id="@+id/taskImageDetailView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <View
+        android:id="@+id/taskIconCircle"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/shape_circle"
+        android:backgroundTint="?attr/multi_select_background_color"/>
+
+    <ImageView
+        android:id="@+id/taskIcon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintTop_toTopOf="@id/taskIconCircle"
+        app:layout_constraintStart_toStartOf="@id/taskIconCircle"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:tint="?attr/themed_icon_color"
+        tools:src="@drawable/ic_article_description"
+        android:contentDescription="@null"/>
+
+    <TextView
+        android:id="@+id/taskTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/taskIconCircle"
+        app:layout_constraintTop_toTopOf="@+id/taskIconCircle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="?attr/material_theme_primary_color"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:letterSpacing="0.5sp"
+        android:lineSpacingExtra="6sp"
+        tools:text="Lorem ipsum"/>
+
+    <TextView
+        android:id="@+id/taskDescription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/taskTitle"
+        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
+        app:layout_constraintEnd_toEndOf="@+id/taskTitle"
+        android:lineSpacingExtra="6sp"
+        android:textColor="?attr/material_theme_secondary_color"
+        tools:text="Lorem ipsum"/>
 
     <LinearLayout
-        android:id="@+id/actionLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/addContainer"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:orientation="horizontal">
+        android:padding="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@id/taskDescription"
+        app:layout_constraintStart_toEndOf="@id/taskIconCircle"
+        android:background="?attr/selectableItemBackground">
 
-        <LinearLayout
-            android:id="@+id/addContainer"
+        <ImageView
+            android:id="@+id/add_image"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_add_gray_white_24dp"
+            android:tint="?attr/colorAccent" />
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingEnd="16dp"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/add_image"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@null"
-                android:padding="12dp"
-                android:src="@drawable/ic_add_gray_white_24dp"
-                android:tint="?attr/colorAccent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:letterSpacing="0.04"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/suggested_edits_task_action_text_add"
-                android:textAllCaps="true"
-                android:textColor="?attr/colorAccent"
-                android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/translateContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/suggetedEditsTranslateImage"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@null"
-                android:padding="12dp"
-                android:src="@drawable/ic_translate_white_24dp"
-                android:tint="?attr/colorAccent" />
-
-            <TextView
-                android:id="@+id/suggetedEditsTranslateActionText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:letterSpacing="0.04"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/suggested_edits_task_action_text_translate"
-                android:textAllCaps="true"
-                android:textColor="?attr/colorAccent"
-                android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="4dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/suggested_edits_task_action_text_add"
+            android:textAllCaps="true"
+            android:textColor="?attr/colorAccent"
+            android:letterSpacing="0.5sp"
+            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/translateContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/addContainer"
+        app:layout_constraintStart_toEndOf="@id/addContainer"
+        android:background="?attr/selectableItemBackground">
+
+        <ImageView
+            android:id="@+id/suggetedEditsTranslateImage"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_translate_white_24dp"
+            android:tint="?attr/colorAccent" />
+
+        <TextView
+            android:id="@+id/suggetedEditsTranslateActionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="4dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/suggested_edits_task_action_text_translate"
+            android:textAllCaps="true"
+            android:textColor="?attr/colorAccent"
+            android:letterSpacing="0.5sp"
+            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
