--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -159,9 +159,7 @@
                         android:id="@+id/tasksRecyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="?attr/paper_color"
-                        android:paddingStart="@dimen/suggested_edits_screen_margin"
-                        android:paddingEnd="@dimen/suggested_edits_screen_margin" />
+                        android:background="?attr/paper_color" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
