--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/taskInfoContainer"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/paper_color"
-    android:orientation="vertical">
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <View
         android:id="@+id/taskIconCircle"
@@ -43,7 +39,7 @@
         android:textColor="?attr/material_theme_primary_color"
         android:textStyle="bold"
         android:textAllCaps="true"
-        android:letterSpacing="0.5sp"
+        android:letterSpacing="0.05"
         android:lineSpacingExtra="6sp"
         tools:text="Lorem ipsum"/>
 
@@ -51,6 +47,7 @@
         android:id="@+id/taskDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="@+id/taskTitle"
         app:layout_constraintTop_toBottomOf="@+id/taskTitle"
         app:layout_constraintEnd_toEndOf="@+id/taskTitle"
@@ -86,7 +83,7 @@
             android:text="@string/suggested_edits_task_action_text_add"
             android:textAllCaps="true"
             android:textColor="?attr/colorAccent"
-            android:letterSpacing="0.5sp"
+            android:letterSpacing="0.05"
             android:textSize="@dimen/suggested_edits_message_textview_text_size" />
     </LinearLayout>
 
@@ -118,8 +115,8 @@
             android:text="@string/suggested_edits_task_action_text_translate"
             android:textAllCaps="true"
             android:textColor="?attr/colorAccent"
-            android:letterSpacing="0.5sp"
+            android:letterSpacing="0.05"
             android:textSize="@dimen/suggested_edits_message_textview_text_size" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
