--- a/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
+++ b/app/src/main/res/layout/fragment_suggested_edits_tasks.xml
@@ -1,192 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/main_toolbar_color"
-    android:orientation="vertical">
+    android:background="?attr/main_toolbar_color">
 
-    <org.wikipedia.views.SuggestedEditsDisabledStatesView
-        android:id="@+id/disabledStatesView"
+    <ScrollView
+        android:id="@+id/suggestedEditsScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingStart="@dimen/suggested_edits_screen_margin"
-        android:paddingEnd="@dimen/suggested_edits_screen_margin"
-        android:visibility="gone" />
+        android:layout_height="match_parent">
 
-    <org.wikipedia.views.WikiErrorView
-        android:id="@+id/errorView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="?android:windowBackground"
-        android:gravity="center"
-        android:visibility="gone" />
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <org.wikipedia.views.SuggestedEditsDisabledStatesView
+                android:id="@+id/disabledStatesView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/suggested_edits_stats_bottom_margin"
                 android:paddingStart="@dimen/suggested_edits_screen_margin"
-                android:paddingEnd="@dimen/suggested_edits_screen_margin">
-
-                <org.wikipedia.views.ImageTitleDescriptionView
-                    android:id="@+id/contributionsStatsView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <org.wikipedia.views.ImageTitleDescriptionView
-                    android:id="@+id/editStreakStatsView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toStartOf="@+id/editQualityStatsView"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <org.wikipedia.views.ImageTitleDescriptionView
-                    android:id="@+id/pageViewStatsView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView" />
-
-                <org.wikipedia.views.ImageTitleDescriptionView
-                    android:id="@+id/editQualityStatsView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editStreakStatsView" />
-
-                <LinearLayout
-                    android:id="@+id/tooltipLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/contributionsStatsView">
-
-                    <View
-                        android:id="@+id/topTooltipArrow"
-                        android:layout_width="30dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="end"
-                        android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
-                        android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
-                        android:background="@drawable/triangle"
-                        android:elevation="4dp" />
-
-                    <TextView
-                        android:id="@+id/tooltipTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="?attr/paper_color"
-                        android:elevation="4dp"
-                        android:fontFamily="sans-serif"
-                        android:lineSpacingExtra="6sp"
-                        android:padding="16dp"
-                        android:textAlignment="center"
-                        android:textSize="@dimen/suggested_edits_message_textview_text_size" />
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/onboardingImageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@null"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <View
-                android:id="@+id/bottomTooltipArrow"
-                android:layout_width="30dp"
-                android:layout_height="15dp"
-                android:layout_gravity="end"
-                android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
-                android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
-                android:background="@drawable/triangle"
-                android:elevation="4dp"
+                android:paddingEnd="@dimen/suggested_edits_screen_margin"
                 android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/textViewForMessage"
+            <org.wikipedia.views.WikiErrorView
+                android:id="@+id/errorView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:visibility="gone" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/suggested_edits_screen_margin"
-                android:layout_marginEnd="@dimen/suggested_edits_screen_margin"
-                android:fontFamily="sans-serif"
-                android:lineSpacingExtra="6sp"
-                android:textAlignment="center"
-                android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+                android:orientation="vertical">
 
-            <View
-                android:layout_width="30dp"
-                android:layout_height="15dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/triangle" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/suggested_edits_stats_bottom_margin"
+                    android:paddingStart="@dimen/suggested_edits_screen_margin"
+                    android:paddingEnd="@dimen/suggested_edits_screen_margin">
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/swipeRefreshLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="400dp">
+                    <org.wikipedia.views.ImageTitleDescriptionView
+                        android:id="@+id/contributionsStatsView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <org.wikipedia.views.ImageTitleDescriptionView
+                        android:id="@+id/editStreakStatsView"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@id/editQualityStatsView"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintTop_toTopOf="@id/contributionsStatsView" />
+
+                    <org.wikipedia.views.ImageTitleDescriptionView
+                        android:id="@+id/pageViewStatsView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintStart_toStartOf="@id/contributionsStatsView"
+                        app:layout_constraintTop_toBottomOf="@id/contributionsStatsView" />
+
+                    <org.wikipedia.views.ImageTitleDescriptionView
+                        android:id="@+id/editQualityStatsView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/pageViewStatsView" />
+
+                    <LinearLayout
+                        android:id="@+id/tooltipLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/contributionsStatsView">
+
+                        <View
+                            android:id="@+id/topTooltipArrow"
+                            android:layout_width="30dp"
+                            android:layout_height="15dp"
+                            android:layout_gravity="end"
+                            android:layout_marginStart="@dimen/suggested_edits_top_tooltip_margin"
+                            android:layout_marginEnd="@dimen/suggested_edits_top_tooltip_margin"
+                            android:background="@drawable/triangle"
+                            android:elevation="4dp" />
+
+                        <TextView
+                            android:id="@+id/tooltipTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/paper_color"
+                            android:elevation="4dp"
+                            android:fontFamily="sans-serif"
+                            android:lineSpacingExtra="6sp"
+                            android:padding="16dp"
+                            android:textAlignment="center"
+                            android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/onboardingImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@null"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_suggested_edits_onboarding" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:id="@+id/bottomTooltipArrow"
+                    android:layout_width="30dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="@dimen/suggested_edits_bottom_tooltip_margin"
+                    android:layout_marginEnd="@dimen/suggested_edits_bottom_tooltip_margin"
+                    android:background="@drawable/triangle"
+                    android:elevation="4dp"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/textViewForMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/suggested_edits_screen_margin"
+                    android:layout_marginEnd="@dimen/suggested_edits_screen_margin"
+                    android:fontFamily="sans-serif"
+                    android:lineSpacingExtra="6sp"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/suggested_edits_message_textview_text_size" />
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/triangle" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/tasksRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:background="?attr/paper_color" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/tasksRecyclerView"
-                        android:layout_width="match_parent"
+                    <Button
+                        android:id="@+id/paused"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/paper_color" />
+                        android:text="Paused" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/disabled"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Disabled" />
 
-                        <Button
-                            android:id="@+id/paused"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Paused" />
-
-                        <Button
-                            android:id="@+id/disabled"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Disabled" />
-
-                        <Button
-                            android:id="@+id/ipBlocked"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="ipBlocked" />
-                    </LinearLayout>
-
+                    <Button
+                        android:id="@+id/ipBlocked"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ipBlocked" />
                 </LinearLayout>
 
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </ScrollView>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
