--- a/app/src/main/res/layout/view_suggested_edits_task_item.xml
+++ b/app/src/main/res/layout/view_suggested_edits_task_item.xml
@@ -2,6 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_height="wrap_content"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <View
@@ -11,7 +12,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
         android:background="@drawable/shape_circle"
         android:backgroundTint="?attr/multi_select_background_color"/>
 
@@ -35,7 +35,6 @@
         app:layout_constraintTop_toTopOf="@+id/taskIconCircle"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:textColor="?attr/material_theme_primary_color"
         android:textStyle="bold"
         android:textAllCaps="true"
@@ -62,8 +61,10 @@
         android:padding="4dp"
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toBottomOf="@id/taskDescription"
         app:layout_constraintStart_toEndOf="@id/taskIconCircle"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="?attr/selectableItemBackground">
 
         <ImageView
