--- a/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
+++ b/app/src/main/res/layout/view_suggested_edits_disabled_states.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:paddingTop="16dp"
     android:orientation="vertical">
 
     <ImageView
